updating heading capitalization

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-/* jonolist/css/style.css */
+/* loglists/css/style.css */
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;500;600&display=swap');
 
